idea/testData/checker/diagnosticsMessage/fullPackageFQNameOnVisiblityError.fir.kt
// WITH_RUNTIME

package a.b

@kotlin.internal.<error descr="[INVISIBLE_REFERENCE] Symbol kotlin/internal/InlineOnly.InlineOnly is invisible">InlineOnly</error>
inline fun foo() {}
